# nucrab

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: cli.rs  install.rs  lib.rs  main.rs  uninstall.rs
src/models/: mod.rs  package_root.rs  package_type.rs
